--- a/MVCMadhan/Views/CricketerDetails/Create.cshtml
+++ b/MVCMadhan/Views/CricketerDetails/Create.cshtml
@@ -4,19 +4,15 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create Player</h1>
 
-<h4>Cricketer</h4>
+<h4>ODI Stats</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CricketerId" class="control-label"></label>
-                <input asp-for="CricketerId" class="form-control" />
-                <span asp-validation-for="CricketerId" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <label asp-for="CricketerName" class="control-label"></label>
                 <input asp-for="CricketerName" class="form-control" />
