--- a/MVCMadhan/Views/CricketerDetails/Delete.cshtml
+++ b/MVCMadhan/Views/CricketerDetails/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Player</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to <b>DELETE</b> this Player?</h3>
 <div>
-    <h4>Cricketer</h4>
+    <h4>ODI Stats</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -49,7 +49,7 @@
         </dd>
     </dl>
     
-    <form asp-action="DeleteById">
+    <form asp-action="Delete">
         <input  asp-for="CricketerId" type="hidden" class="form-control"/>
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
