--- a/MVCMadhan/Views/CricketerDetails/View.cshtml
+++ b/MVCMadhan/Views/CricketerDetails/View.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "View";
 }
 
-<h1>View</h1>
+<h1>CricketerDetails</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Player</a>
 </p>
 <table class="table">
     <thead>
