--- a/MVCMadhan/Views/CricketerDetails/Delete.cshtml
+++ b/MVCMadhan/Views/CricketerDetails/Delete.cshtml
@@ -49,7 +49,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Deletebynum">
         <input  asp-for="CricketerId" type="hidden" class="form-control"/>
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
