--- a/MVCMadhan/Views/CricketerDetails/Create.cshtml
+++ b/MVCMadhan/Views/CricketerDetails/Create.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+
             <div class="form-group">
                 <label asp-for="CricketerName" class="control-label"></label>
                 <input asp-for="CricketerName" class="form-control" />
@@ -37,6 +37,13 @@
                 <label asp-for="Hundreds" class="control-label"></label>
                 <input asp-for="Hundreds" class="form-control" />
                 <span asp-validation-for="Hundreds" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LocationId" class="control-label"></label>
+                <select asp-for="LocationId" class="form-control" asp-items="@(new SelectList(Model.Location,"LocationId","LocationName"))">
+                    <option value="0">--Select--</option>
+                </select>
+                <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
