--- a/MVCMadhan/Views/CricketerDetails/View.cshtml
+++ b/MVCMadhan/Views/CricketerDetails/View.cshtml
@@ -30,6 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Hundreds)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LocationId)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -55,9 +58,12 @@
                 @Html.DisplayFor(modelItem => item.Hundreds)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.CricketerId }) |
-                @Html.ActionLink("Details", "Details", new { id=item.CricketerId }) |
-                @Html.ActionLink("Delete", "Delete", new {id=item.CricketerId })
+                @Html.DisplayFor(modelItem => item.LocationId)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.CricketerId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.CricketerId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.CricketerId })
             </td>
         </tr>
 }
