--- a/MVCMadhan/Views/CricketerDetails/Edit.cshtml
+++ b/MVCMadhan/Views/CricketerDetails/Edit.cshtml
@@ -43,6 +43,13 @@
                 <span asp-validation-for="Hundreds" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="LocationId" class="control-label"></label>
+                <select asp-for="LocationId" class="form-control" asp-items="@(new SelectList(Model.Location,"LocationId","LocationName"))">
+                    <option value="0">--Select--</option>
+                </select>
+                <span asp-validation-for="Location" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
