--- a/MVCMadhan/Views/Login/View.cshtml
+++ b/MVCMadhan/Views/Login/View.cshtml
@@ -15,14 +15,16 @@
     <style>
 
 
-html {
-  background-color: #000000;
-}
+        html {
+            background-color: #000000;
+        }
 
-body {
-  font-family: "Poppins", sans-serif;
-  height: 100vh;
-}
+        body {
+            font-family: "Poppins", sans-serif;
+            height: 100vh;
+
+
+        }
 
 a {
   color: #92badd;
@@ -253,30 +255,34 @@ input[type=text]:placeholder {
 }
 
 
- </style>
+    </style>
 
 
 </head>
 <body>
-  
 
-        <div class="wrapper fadeInDown">
-            <div id="formContent">
-                
 
-                <form asp-controller="Home" asp-action="Index">
-                    <div class="name">
-                        <h2 style="color:black;"><strong>WELCOME TO LOGIN PAGE</strong></h2>
-                    </div>
-                    
-                    <input type="text" id="login" class="fadeIn second" name="login" placeholder="EmailID"required>
-                    <input type="password" id="password"  name="login" placeholder="Password" required>
-                    <input type="submit" class="fadeIn fourth" value="Log In">
-                </form>
+    <div class="wrapper fadeInDown">
+        <div id="formContent">
 
-                
 
-            </div>
+            <form asp-controller="Home" asp-action="Index">
+                <div class="name">
+                    <h2 style="color:black;"><strong>WELCOME TO LOGIN PAGE</strong></h2>
+                </div>
+
+                <input type="text" id="login" class="fadeIn second" name="login" placeholder="EmailID" required>
+                <input type="password" id="password" name="login" placeholder="Password" required>
+                <input type="submit" class="fadeIn fourth" value="Log In">
+            </form>
+
+
+
         </div>
+    </div>
 </body>
 </html>
+
+@*//.name {
+            background-image: url(C:\Users\Admin\Downloads\Backgroundimage.jpg);
+        }*@
