--- a/MVCMadhan/Views/Register/Register.cshtml
+++ b/MVCMadhan/Views/Register/Register.cshtml
@@ -41,7 +41,7 @@ h2 {
   font-weight: 600;
   text-transform: uppercase;
   display:inline-block;
-  margin: 40px 8px 10px 8px;
+  margin: 10px 8px 10px 8px;
   color: #cccccc;
 }
 
@@ -64,9 +64,8 @@ h2 {
   background: #fff;
   padding: 30px;
   width: 90%;
- @* max-width: 450px;*@
   position: relative;
-  padding: 90px;
+  
   -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
   box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
   text-align: center;
@@ -263,15 +262,16 @@ input[type=text]:placeholder {
 
 </head>
 
-<h1>SignUp</h1>
 
-<h4>Create Your New Account Here</h4>
 <div class="wrapper fadeInDown">
     <div id="formContent">
         <div class="row">
             <div class="col-md-4">
                 <form asp-action="Register">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <h1>SignUp</h1>
+
+                    <h2 style="color:black;"><strong>CREATE YOUR NEW ACCOUNT HERE</strong></h2>
                     <div class="form-group">
                         <label asp-for="Username" class="control-label"></label>
                         <input asp-for="Username" class="form-control" placeholder="Email" />
