--- a/MVCMadhan/Views/Shared/_Layout.cshtml
+++ b/MVCMadhan/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="CricketerDetails" asp-action="Index">CricketerDetails</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Register" asp-action="Index">Registration</a>
+                        </li>
                     </ul>
                 </div>
             </div>
