--- a/MVCMadhan/Views/Register/Delete.cshtml
+++ b/MVCMadhan/Views/Register/Delete.cshtml
@@ -25,8 +25,8 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="RegistrationId" />
+    <form asp-action="Deletebyid">
+        <input type="hidden" asp-for="RegistrationId" class="form-control"/>
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
