--- a/MVCMadhan/Views/Register/Details.cshtml
+++ b/MVCMadhan/Views/Register/Details.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Registration</h4>
+    <h2>Registration Details</h2>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
