--- a/MVCMadhan/Views/Register/Register.cshtml
+++ b/MVCMadhan/Views/Register/Register.cshtml
@@ -63,7 +63,7 @@ h2 {
   border-radius: 10px 10px 10px 10px;
   background: #fff;
   padding: 30px;
-  width: 90%;
+  width: 50%;
   position: relative;
   
   -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
@@ -128,7 +128,7 @@ input[type=text],input[type=password] {
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: inline;
   font-size: 16px;
   margin: 5px;
   width: 85%;
