--- a/MVCMadhan/Views/Register/View.cshtml
+++ b/MVCMadhan/Views/Register/View.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "View";
 }
 
-<h1>View</h1>
+<h1>Registration Details</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Registration</a>
 </p>
 <table class="table">
     <thead>
@@ -32,7 +32,7 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.RegistrationId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RegistrationId">Details</a> |
+                <a asp-action="Details"asp-route-id="@item.RegistrationId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.RegistrationId">Delete</a>
             </td>
         </tr>
