--- a/MVCMadhan/Views/Register/Delete.cshtml
+++ b/MVCMadhan/Views/Register/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Registration</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to DELETE this registration?</h3>
 <div>
-    <h4>Registration</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
