--- a/MVCMadhan/Views/Login/Login.cshtml
+++ b/MVCMadhan/Views/Login/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model DapperDataAccessLayer.Cricketer
+﻿@model EntityFrameworkMVC.Registration
 @{
     Layout = null;
 }
@@ -267,13 +267,19 @@ input[type=text]:placeholder {
         <div id="formContent">
 
 
-            <form asp-controller="Home" asp-action="Index">
+            <form asp-controller="Login" asp-action="Authentication">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="name">
                     <h2 style="color:black;"><strong>WELCOME TO LOGIN PAGE</strong></h2>
                 </div>
-
-                <input type="text"  id="login" class="fadeIn second" name="login" placeholder="EmailID" required>
-                <input type="password" id="password" name="login" placeholder="Password" required>
+                <div class="form-group">
+                <input type="text" asp-for="Username"  id="login" class="fadeIn second" name="login" placeholder="EmailID" required>
+                <span asp-validation-for="Username"></span>
+                </div>
+                <div class="form-group">
+                    <input type="password" asp-for="Password" id="password" name="login" placeholder="Password" required>
+                    <span asp-validation-for="Password"></span>
+                </div>
                 <input type="submit" class="fadeIn fourth" value="LogIn"><br>
                 <div>
                     <a class="btn-group-vertical"  asp-controller="Register" asp-action="Create"><strong>SignUp</strong></a>
@@ -291,4 +297,4 @@ input[type=text]:placeholder {
 
 @*//.name {
             background-image: url(C:\Users\Admin\Downloads\Backgroundimage.jpg);
-        }*@
+        }*@ 
